--- a/css/project_4_colorBuilder.css
+++ b/css/project_4_colorBuilder.css
@@ -1,7 +1,14 @@
 .color-builder {
-  width: 80%;
-  margin: 0 auto;
-  background-color: #f5f5f4;
+  padding: 30px 30px;
+  margin: 50px auto;
+  overflow: hidden;
+  background-color: rgba(185, 185, 185, 0.44);
+  -webkit-border-radius: 20px;
+  -moz-border-radius:    20px;
+  border-radius:         20px;
+  -webkit-box-shadow: -4px -4px 7px 0px rgba(50, 50, 50, 0.75);
+  -moz-box-shadow:    -4px -4px 7px 0px rgba(50, 50, 50, 0.75);
+  box-shadow:         -4px -4px 7px 0px rgba(50, 50, 50, 0.75);
 }
 
 .color-builder__section {
