Change input width

--- a/css/project_4_login.css
+++ b/css/project_4_login.css
@@ -119,6 +119,7 @@ body {
 input[type=text].login__input,
 input[type=password].login__input {
   display: block;
+  width: 100%;
   margin: 20px auto;
   padding-left: 46px;
   height: 3.5em;  
@@ -201,6 +202,11 @@ input[type=password].login__input {
 
 @media screen and (min-width: 700px) {
   .login-alternative__item { width: 50%; }
+
+  input[type=text].login__input,
+  input[type=password].login__input {
+    width: 70%;
+  }
 }
 
 @media screen and (min-width: 1000px) {
