--- a/css/button.css
+++ b/css/button.css
@@ -56,7 +56,6 @@
 .button:active {
   color: rgb(255, 251, 0);
   text-shadow: -1px -1px 0px rgba(0, 0, 0, 1);
-  -webkit-tap-highlight-color: rgba(62,109,230,1);
   background: -moz-linear-gradient(270deg, rgba(62,109,230,1) 0%, 
                                            rgba(53,94,197,1) 38%);
   background: -webkit-gradient(linear, left top, left bottom, 
@@ -74,6 +73,7 @@
                                                       endColorstr='#355EC5',
                                                       GradientType=0 );
   box-shadow: inset 0 0 1em #000;
+  -webkit-tap-highlight-color: rgba(53, 94, 197, 1);
 }
 .button-sm {
   font-size: 0.7em;
