--- a/css/button.css
+++ b/css/button.css
@@ -9,20 +9,18 @@
 }
 
 .button {
+  display: inline-block;
   margin: 10px 20px;
   padding: 12px 40px;
-  display: inline-block;
+
   font-size: 1em;
-  font-family: 'Helvetica Neue', Helvetica, Monaco, monospace;
+  font-family: 'Helvetica Neue', Helvetica, 'Monaco', monospace;
   text-transform: uppercase;
   color: #fff;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
 
   background: -webkit-gradient(linear, left top, left bottom, 
-                          color-stop(0%, rgba(62,109,230,1)), 
-                          color-stop(100%, rgba(53,94,197,1)));
+                    color-stop(0%, rgba(62,109,230,1)), 
+                    color-stop(100%, rgba(53,94,197,1)));
 
   background: -webkit-linear-gradient(270deg, rgba(62,109,230,1) 0%, 
                                               rgba(53,94,197,1) 100%);
@@ -39,6 +37,11 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E6DE6', 
                                                       endColorstr='#355EC5',
                                                       GradientType=0 );
+ 
+  border-radius:         5px;
+  -moz-border-radius:    5px;
+  -webkit-border-radius: 5px;
+ 
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 
               0px 3px 0px 0px rgba(0, 0, 0, 0.36), 
               2px 3px 1px 1px rgba(0, 0, 0, 0.12);
@@ -46,38 +49,46 @@
   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 
               0px 3px 0px 0px rgba(18, 57, 156, 1.36), 
               2px 3px 1px 1px rgba(0, 0, 0, 0.12);
+              
   border: 1px solid rgba(255, 255, 255, 1.21);
 }
 
 .button:hover {
-  cursor: pointer;
   border-color: #000;
+  cursor: pointer;
 }
+
 .button:active {
   color: rgb(255, 251, 0);
   text-shadow: -1px -1px 0px rgba(0, 0, 0, 1);
+  
   background: -moz-linear-gradient(270deg, rgba(62,109,230,1) 0%, 
                                            rgba(53,94,197,1) 38%);
+                                           
   background: -webkit-gradient(linear, left top, left bottom, 
-                    color-stop(0%, rgba(62,109,230,1)), 
-                    color-stop(38%, rgba(53,94,197,1)));
+                    	                 color-stop(0%, rgba(62,109,230,1)), 
+                                      color-stop(38%, rgba(53,94,197,1)));
+                                      
   background: -webkit-linear-gradient(270deg, rgba(62,109,230,1) 0%, 
                                               rgba(53,94,197,1) 38%);
+                                              
   background: -o-linear-gradient(270deg, rgba(62,109,230,1) 0%, 
                                          rgba(53,94,197,1) 38%);
+                                         
   background: -ms-linear-gradient(270deg, rgba(62,109,230,1) 0%, 
                                           rgba(53,94,197,1) 38%);
+                                          
   background: linear-gradient(180deg, rgba(62,109,230,1) 0%, 
                                       rgba(53,94,197,1) 38%);
+                                      
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E6DE6', 
                                                       endColorstr='#355EC5',
                                                       GradientType=0 );
+                                                      
   box-shadow: inset 0 0 1em #000;
+  
   -webkit-tap-highlight-color: rgba(53, 94, 197, 1);
 }
-.button-sm {
-  font-size: 0.7em;
-}
-.button-lg {
-  font-size: 1.4em;
-}
+
+.button-sm { font-size: 0.7em; }
+.button-lg { font-size: 1.4em; }
