--- a/css/project_4_questionnaire.css
+++ b/css/project_4_questionnaire.css
@@ -62,6 +62,10 @@ body {
   -webkit-box-shadow: inset 0 -2px #ebebeb;
   box-shadow: inset 0 -2px #ebebeb;
 }
+
+.list__input--hidden {
+  display: none;
+}
  
 .list__radio{
   display: none;
