Add the modifier shipping__label--required

--- a/css/project_4_shipping.css
+++ b/css/project_4_shipping.css
@@ -77,7 +77,7 @@ input[type="checkbox"].shipping__input--billing-checkbox {
   font-weight: 100;
 }
 
-.shipping__label:after {
+.shipping__label--required:after {
   content: '*';
   color: #FF2E55;
 }
