--- a/css/project_4_scheduling.css
+++ b/css/project_4_scheduling.css
@@ -31,7 +31,7 @@ body {
   line-height: 64px;
 }
 
-.shipping__label {
+.schedule__label {
   display: inline-block;
   position: relative;
   margin-bottom: 10px;
@@ -50,8 +50,8 @@ body {
   border-top-left-radius: 30px;
 }
 
-.shipping__input,
-.shipping__select {
+.schedule__input,
+.schedule__select {
   display: block;
   height: 55px;
   margin-bottom: 15px;
@@ -65,17 +65,17 @@ body {
   box-shadow: inset 0 -2px #DCDCDC;
 }
 
-.shipping__input,
-.shipping__select,
-.shipping__textarea {
+.schedule__input,
+.schedule__select,
+.schedule__textarea {
   width: 95%;
 }
 
-.shipping__input {
+.schedule__input {
   padding-left: 26px; 
 }
  
-.shipping__input--evtName {
+.schedule__input--evtName {
     width: 90%;
     height: 55px;
     margin-bottom: 15px;
@@ -90,7 +90,7 @@ body {
     border-top: 1px dashed #c20029;
 }
  
-.shipping__textarea {
+.schedule__textarea {
     display: block;
     height: 150px;
     margin-bottom: 15px;
@@ -105,7 +105,7 @@ body {
     padding-left: 26px;
 }
  
-.shipping__submit {
+.schedule__submit {
   position: relative;
   width: 55%;
   height: 50px;
