--- a/css/calculator.css
+++ b/css/calculator.css
@@ -14,6 +14,10 @@
   box-shadow: 4px 3px 11px #666666;
 }
 
+#result {
+  text-align: right;
+}
+
 #calc-controls {
   margin: 0 auto;
   width: 81%;
