--- a/css/product.css
+++ b/css/product.css
@@ -315,6 +315,11 @@ body {
   display: block;
 }
 
+#cartCouponRow {
+  display: none;
+}
+
+
 #coupon {
   padding: 10px 10px;
   background-color: #EfEfEf;
@@ -325,6 +330,21 @@ body {
     padding: 9px 10px;
     margin: 10px;
     font-family: "Courier New", Courier, monospace;
+}
+
+.cart-coupon {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.cart-coupon--valid {
+  font-weight: 300;
+  color: green;
+}
+
+.cart-coupon--invalid {
+  font-weight: 800;
+  color: red;
 }
  
 .input-group-btn {
