--- a/css/calculator.css
+++ b/css/calculator.css
@@ -1,102 +1,164 @@
 
-#calc-wrapper {
-  position: relative;
-  min-width: 320px;
-  padding-bottom: 50px;
-  overflow: hidden;
-  background-color: #98d1ea;
-  border-radius: 20px 20px 5px 5px;
-  -moz-border-radius: 20px 20px 5px 5px;
-  -webkit-border-radius: 20px 20px 5px 5px;
-  border-bottom: 6px solid #189de1;
-  -webkit-box-shadow: 4px 3px 11px #666666;
-  -moz-box-shadow: 4px 3px 11px #666666;
-  box-shadow: 4px 3px 11px #666666;
+body {
+  background:
+    -webkit-linear-gradient(45deg, hsla(207, 94%, 46%, 1) 0%, hsla(207, 94%, 46%, 0) 70%),
+    -webkit-linear-gradient(315deg, hsla(129, 91%, 44%, 1) 10%, hsla(129, 91%, 44%, 0) 80%),
+    -webkit-linear-gradient(225deg, hsla(246, 91%, 49%, 1) 10%, hsla(246, 91%, 49%, 0) 80%),
+    -webkit-linear-gradient(135deg, hsla(349, 99%, 46%, 1) 100%, hsla(349, 99%, 46%, 0) 70%);
+  background:
+    linear-gradient(45deg, hsla(207, 94%, 46%, 1) 0%, hsla(207, 94%, 46%, 0) 70%),
+    linear-gradient(135deg, hsla(129, 91%, 44%, 1) 10%, hsla(129, 91%, 44%, 0) 80%),
+    linear-gradient(225deg, hsla(246, 91%, 49%, 1) 10%, hsla(246, 91%, 49%, 0) 80%),
+    linear-gradient(315deg, hsla(349, 99%, 46%, 1) 100%, hsla(349, 99%, 46%, 0) 70%);
 }
 
+#calculator {
+  width: 353px;
+  font-weight: 200;
+  color: rgba(255, 255, 255, 0.43);
+  background-color: #293751;
+  box-sizing: border-box;
+  border-radius: 15px;
+  margin: 100px auto;
+  overflow: auto;
+  -webkit-box-shadow: 5px 18px 29px -8px rgba(0,0,0,0.75);
+  -moz-box-shadow: 5px 18px 29px -8px rgba(0,0,0,0.75);
+  box-shadow: 5px 18px 29px -8px rgba(0,0,0,0.75);
+}
+
+#result__wrapper {
+  margin-top: 30px;
+  background-color: #262835;
+}
+
+
 #result {
+  margin: 20px;
+  color: #317cbf;
+  font-size: 3em;
   text-align: right;
 }
 
-#calc-controls {
-  margin: 0 auto;
-  width: 81%;
+#operation {
+  padding: 10px;
+  font-weight: 200;
+  letter-spacing: 0.1em;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+#calculator input {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  color: inherit;
+  background-color: transparent;
+  border: 0;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+#calculator input:hover,
+#calculator input:focus {
+  outline: none;
+}
+
+#controls__wrapper {
+  position: relative;
+  overflow: auto;
+  padding: 0 20px;
 }
 
 #top-controls {
-  overflow: hidden;
+  clear: both;
 }
 
 #numbers {
+  width: 65%;
   float: left;
-  width: 80%;
 }
 
-#controls {
-  float: right;
-  width: 20%;
+#right-controls {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  height: 100%;
+  text-align: center;
+  -webkit-box-shadow: -1px 4px 19px -5px rgba(0,0,0,0.49);
+  -moz-box-shadow: -1px 4px 19px -5px rgba(0,0,0,0.49);
+  box-shadow: -1px 4px 19px -5px rgba(0,0,0,0.49);
 }
 
-input[type="text"] {
-  display: block;
-  width: 80%;
-  position: relative;
-  margin: 30px auto;
-  padding: 20px;
-  font-size: 1.25em;
+#right-controls li {
+  height: 19%;
+  width: 100%;
+}
+
+#calculator .control__list {
+  padding-left: 0;
+  list-style: none;
+}
+
+#calculator .control__list li {
+  display: inline-block;
+}
+
+#numbers.control__list li {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 5px;
+  border: 1px solid rgba(255, 255, 255, 0.09);
+  border-radius: 100%;
+  background: rgb(42,54,78); /* Old browsers */
+  /* IE10+ */
+  background-image: -ms-linear-gradient(top, #2B3751 0%, #253149 50%, #232F47 100%);
+
+  /* Mozilla Firefox */
+  background-image: -moz-linear-gradient(top, #2B3751 0%, #253149 50%, #232F47 100%);
+
+  /* Opera */
+  background-image: -o-linear-gradient(top, #2B3751 0%, #253149 50%, #232F47 100%);
+
+  /* Webkit (Safari/Chrome 10) */
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #2B3751), color-stop(50, #253149), color-stop(100, #232F47));
+
+  /* Webkit (Chrome 11+) */
+  background-image: -webkit-linear-gradient(top, #2B3751 0%, #253149 50%, #232F47 100%);
+
+  /* W3C Markup */
+  background-image: linear-gradient(to bottom, #2B3751 0%, #253149 50%, #232F47 100%);
+}
+
+#top-controls li:hover {
+  color: #72ff00;
+}
+
+#numbers.control__list li:hover,
+#right-controls.control__list li:hover {
   color: #fff;
-  background-color: #7ba7bb;
+  background: #2196f3;
 }
 
-.button {
-  width: 55px;
-  margin: 10px 5px;
-  font-size: 0.8em;
-  color: #8F8B8B;
-  border: 0;
-  background-color: #fff;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 1px 4px 0 #73A5BA;
-  -moz-box-shadow: 1px 4px 0 #73A5BA;
-  box-shadow: 1px 4px 0 #73A5BA;
-  font-family: Arial, Courier;
+.control__list li:active {
+  -webkit-box-shadow: inset -1px 3px 17px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset -1px 3px 17px -2px rgba(0,0,0,0.75);
+  box-shadow: inset -1px 3px 17px -2px rgba(0,0,0,0.75);
 }
 
-.button:hover {
-  background-color: #c20029;
+#calculator .control__list .equal {
+  height: 16%;
+  width: 46%;
   color: #fff;
+  background-color: rgba(199, 9, 74, 0.72);
+  border: 1px solid rgba(255, 255, 255, 0.09);
+  border-radius: 100%;
+  -webkit-box-shadow: -2px 13px 45px -12px rgba(0,0,0,0.75);
+  -moz-box-shadow: -2px 13px 45px -12px rgba(0,0,0,0.75);
+  box-shadow: -2px 13px 45px -12px rgba(0,0,0,0.75);
 }
-
-.button:active {
-  -webkit-box-shadow: inset 0 0 1em #000;
-  -moz-box-shadow: inset 0 0 1em #000;
-  box-shadow: inset 0 0 1em #000;
-}
-
-
-.clear-controls {
-  background-color: #fda0a9;
-  -webkit-box-shadow: 1px 4px 0 #fd7c88;
-  -moz-box-shadow: 1px 4px 0 #fd7c88;
-  box-shadow: 1px 4px 0 #fd7c88;
-  color: #fff;
-}
-
-.oper-controls {
-  background-color: #fff0f5;
-  font-weight: bolder;
-}
-
-.double {
-  width: 90px;
-}
-
-.equal {
-  width: 92%!important;
-  font-weight: bolder;
-  background-color: #f1fe98;
+#calculator .control__list .equal:hover,
+#calculator .control__list .equal:focus {
+  background-color: #E91E63;
 }
 
 @media screen and (min-width: 415px) {
