--- a/css/calculator.css
+++ b/css/calculator.css
@@ -13,7 +13,7 @@ body {
 }
 
 .calculator {
-  width: 353px;
+  width: 100%;
   font-weight: 200;
   color: rgba(255, 255, 255, 0.43);
   background-color: #293751;
@@ -107,7 +107,7 @@ body {
 }
 
 .control__list--numbers {
-  width: 65%;
+  width: 70%;
   float: left;
 }
 
@@ -123,7 +123,7 @@ body {
   right: 0;
   margin: 0;
   height: 100%;
-  width: 35%;
+  width: 30%;
   text-align: center;
   -webkit-box-shadow: -1px 4px 19px -5px rgba(0,0,0,0.49);
   -moz-box-shadow: -1px 4px 19px -5px rgba(0,0,0,0.49);
@@ -277,32 +277,9 @@ body {
 }
 
 
-@media screen and (min-width: 415px) {
-  .calc-wrapper {
-    width: 420px;
-    margin: 40px auto;
-  }
-  .button {
-    width: 77px;
-    font-size: 1.25em;
-  }
-
-  .double {
-    width: 120px;
-  }
-
-@media screen and (min-width: 767px) {
-  .calc-wrapper {
-    width: 547px;
-    margin: 40px auto;
-  }
-  .button {
-    width: 100px;
-    font-size: 1.35em;
-  }
-
-  .double {
-    width: 120px;
+@media screen and (min-width: 354px) {
+  .calculator  {
+    width: 353px;
   }
 
 }
